# from-gradient-to-transformer

./: .gitattributes  .gitignore  .markdownlint.jsonc  CLAUDE.md  LICENSE  Makefile  README.md  commitlint.config.js  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 01_suggestion.yml  02_bug_report.yml  03_question.yml
.github/workflows/: conventional-commits.yml  markdown-lint.yml  python-ci.yml  python-tests.yml
.obsidian/: graph.json
00_meta/: 00_home.md  01_roadmap.md  02_skill-tree.md  03_progress-log.md  04_conventions.md  05_glossary.md  06_obsidian-setup.md
01_foundations/: _MOC.md  checklist.md
01_foundations/exercises/: 2d-transformation-analysis.md  cross-entropy-from-first-principles.md  dot-products-norms-and-basis-change.md  gradient-verification.md  manual-backprop-mlp.md  maximum-likelihood-estimation-in-practice.md  pipeline-eda-and-visualization.md  probability-sampling-and-expectation.md  sql-queries-for-ml.md  svd-image-compression.md
01_foundations/notes/: abstract-vector-spaces.md  bayesian-thinking-and-regularization.md  bias-variance-decomposition.md  chain-rule-and-backpropagation.md  change-of-basis.md  column-space-and-null-space.md  convex-optimization-basics.md  data-pipeline-fundamentals.md  data-visualization-essentials.md  derivatives-and-gradient-descent.md  determinant-and-area-scaling.md  dot-products-and-duality.md  eigenvalues-and-eigenvectors.md  entropy-cross-entropy-and-kl-divergence.md  eulers-number-and-exponential.md  general-2x2-matrix-as-transformation.md  git-and-reproducible-environments.md  higher-order-derivatives-and-taylor-series.md  (+18 more)
02_classical_ml/: _MOC.md  checklist.md
03_deep_learning/: _MOC.md  checklist.md
04_nlp_and_transformers/: _MOC.md  checklist.md
05_llm_engineering/: _MOC.md  checklist.md
06_production_ai/: _MOC.md  checklist.md
07_capstone/: README.md  _MOC.md  research-plan.md  writeup.md
checklists/: reproducibility-checklist.md
portfolio/: README.md  RESULTS.md  model-card.md
references/: books_and_courses.md
scripts/: new_note.sh
src/: __init__.py  reproducibility.py
templates/: exercise.md  lesson.md  note.md  paper-note.md  project.md  proof.md
tests/: test_bpe_tokenizer.py  test_decoder_only_transformer.py  test_exp3_superposition.py  test_exp4_circuit_patching.py  test_grokking.py  test_induction_heads.py  test_linear_model.py  test_metrics.py  test_micrograd.py  test_pca.py  test_reproducibility.py  test_sae.py  test_tree_model.py
(+86 files in other folders)
