[project]
name = "from-gradient-to-transformer"
version = "0.2.0"
description = "From gradient descent to mechanistic interpretability: train small transformers and reverse-engineer their internals."
authors = [{ name = "Alessio Brillo" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "transformer-lens>=2.0",
    "sae-lens>=1.0",
    "circuitsvis>=1.0",
    "einops>=0.8",
    "wandb>=0.17",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "datasets>=2.19",
    "accelerate>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
]
paper = [
    "latexmk",
]
sae = [
    "sae-lens>=1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["S101"]
"src/experiments/*.py" = ["N806", "E741"]  # Uppercase B,S,D,Q,K,V is standard PyTorch convention

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
